--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,6 +1,4 @@
-{% set name = "xbpch" %}
 {% set version = "0.3.4" %}
-{% set sha256 = "c9bfd5f0ee015d1f4e668b87f8fa4bfb0c226fa2f5a2a8c4bf05b14ca1a939b5" %}
 
 package:
   name: xbpch
@@ -8,12 +6,12 @@ package:
 
 source:
   url: https://pypi.io/packages/source/x/xbpch/xbpch-{{ version }}.tar.gz
-  sha256: cfb4df928792614cf067256161543dfbfb19013b8f140eb4ba3a90fd5fed575e
+  sha256: c9bfd5f0ee015d1f4e668b87f8fa4bfb0c226fa2f5a2a8c4bf05b14ca1a939b5
 
 build:
   noarch: python
   number: 1000
-  script: "{{ PYTHON }} -m pip install . --no-deps --ignore-installed -vvv"
+  script: "{{ PYTHON }} -m pip install . --no-deps -vv"
 
 requirements:
   host:
